feat: add authenticated and authorize middleware to chat endpoints. And update who have permission to retrieve and update chats data
